# datahub-hackathon-oncall

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
dashboard/: server.py  stub_agents.py
dashboard/static/: app.js  finetune_metrics.json  index.html  style.css
docs/runs/: data-oncall-execution-plan-run.md
docs/specs/: dashboard-design.md  data-oncall-execution-plan-context.md  data-oncall-execution-plan-forge.json  data-oncall-execution-plan-yolo.md  data-oncall-execution-plan.md
docs/specs/research/: DataHub-Nebius - FINETUNE-SEEDS.md  DataHub-Nebius - GX-DEEP-DIVE.md  DataHub-Nebius - IDEAS.md  DataHub-Nebius - INTEL.md  DataHub-Nebius - PREP.md  DataHub-Nebius - PROJECT-SPEC.md  DataHub-Nebius - SELECTED-IDEA.md  DataHub-Nebius - STATE-2026-04-10.md  DataHub-Nebius - TECH-REFERENCE.md
gx/: create_olist_dirty_2.py  setup_gx.py  setup_gx_source.py
gx/gx/: great_expectations.yml
gx/gx/checkpoints/: olist_dirty_checkpoint.yml  olist_source_checkpoint.yml
gx/gx/expectations/: .ge_store_backend_id  (+6 more)
incident_response/: __init__.py  events.py  orchestrator.py
incident_response/agents/: base.py  coordinator.py  detective.py  fixer.py  reality_checker.py
incident_response/tools/: datahub_graphql.py  datahub_sdk.py  nl_to_graphql.py  slack.py
incident_response/triggers/: page_team.py
scripts/: smoke_test.sh  start_demo.sh  stop_demo.sh
tests/: test_e2e_left.py  test_tools.py
training/: format_for_nebius.py  gen_prompt.txt  generate.sh  measure_accuracy.py  plan_b_system_prompt.txt  seeds.jsonl  validate_pairs.py
